<?xml version="1.0" encoding="utf-8"?>
<io.github.colemakmods.keyboard_companion.view.SettingsLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            style="?android:attr/textAppearanceSmall"
            android:text="@string/key_graphic"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/settingsKeyGraphicRounded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/rounded_keys"/>
            <RadioButton
                android:id="@+id/settingsKeyGraphicSquare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/square_keys"/>
        </RadioGroup>

    </LinearLayout>

</io.github.colemakmods.keyboard_companion.view.SettingsLayout>